[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "ffmpeg-python",
]
name = "squeeze_vid"
version = "0.2"
dynamic = ["readme"]

[project.scripts]
squeeze-vid = "squeeze_vid.app:main"

[tool.setuptools]
packages = ["squeeze_vid"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/plain"}
