[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "python-ffmpeg",
]
name = "squeeze_vid"
readme = "README.md"
dynamic = ["version"]

[project.optional-dependencies]
test = ["coverage"]

[project.scripts]
squeeze-vid = "squeeze_vid.app:main"

[tool.setuptools]
packages = ["squeeze_vid"]

[tool.setuptools.dynamic]
version = {attr = "squeeze_vid.config.VERSION"}
